Bug 137860 - Crash when using yellow text marker upon scanned non OCRed page
Summary: Crash when using yellow text marker upon scanned non OCRed page
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-11-25 14:21 UTC by Gabriel Ambuehl
Modified: 2007-08-02 11:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriel Ambuehl 2006-11-25 14:21:38 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

Click on a scanned page without OCR using the *yellow* text highlighter and okular quits. 

Unfortunately, kcrash doesn't come up for some reason....
Comment 1 Pino Toscano 2006-11-25 22:41:09 UTC
SVN commit 607827 by pino:

There is nothing to find text into if the text page has no text.

BUG: 137860


 M  +3 -0      textpage.cpp  


--- trunk/playground/graphics/okular/core/textpage.cpp #607826:607827
@@ -107,6 +107,9 @@
 
 RegularAreaRect * TextPage::textArea ( TextSelection * sel) const
 {
+    if ( d->m_words.isEmpty() )
+        return new RegularAreaRect();
+
 /**
   It works like this:
   There are two cursors, we need to select all the text between them. The coordinates are normalised, leftTop is (0,0)
Comment 2 Tobias Koenig 2006-11-27 09:02:16 UTC
On Sat, Nov 25, 2006 at 01:21:38PM -0000, Gabriel Ambuehl wrote:
Hi,

> Click on a scanned page without OCR using the *yellow* text highlighter and okular quits. 
> 
> Unfortunately, kcrash doesn't come up for some reason....

Could you try the following steps, please?

1) Open Konsole
2) Type 'gdb okular'
3) Type 'set args <filename>'
4) Type 'run'
5) Try to highlight the text
6) When it crashed type 'bt' and send us the output

Thanks in advance

Ciao,
Tobias
Comment 3 Gabriel Ambuehl 2006-11-29 21:44:48 UTC
This bug seems to have been fixed in the meanwhile, the current revision 
doesn't crash anymore.