There is nothing to find text into if the text page has no text.

BUG: 137860

svn path=/trunk/playground/graphics/okular/; revision=607827